--- a/Linktree/style.css
+++ b/Linktree/style.css
@@ -1,11 +1,18 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+
 :root{
     --cor0:#F0F7EE;
     --cor1:#C4D7F2;
     --cor2:#AFDEDC;
     --cor3:#91A8A4;
     --cor4:#776871;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-1: 'Amatic SC', cursive;
+    --fonte-2: 'Shadows Into Light', cursive;
     
 }  
 *{
@@ -27,27 +34,44 @@ picture img{
     border-radius: 1500px;
     border-style: solid;
     margin-top: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 h1{
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 120px;
+    font-family: var(--fonte-2);
+    font-size: 2.5em;
     text-align: center;
     font-weight: bold;
+}
+div{
+    max-width: 800px;
+    margin: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+ul{
+    font-family: var(--fonte-2);
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: center;
+    list-style: none;
+    margin-bottom: 60px;
+    columns: 2;
 }
 nav{
     margin: 50px auto;
     
 }
 nav p{
-    font-size: 2em;
+    font-size: 2.5em;
+    font-family: var(--fonte-1);
     color: var(--cor0);
     background-color: var(--cor3);
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     border-radius: 80px;
     max-width: 600px;
     margin: auto;
+    text-shadow: 3px 3px 9px black;
 }
 nav a{
     text-decoration: none;
