--- a/Linktree/style.css
+++ b/Linktree/style.css
@@ -21,7 +21,7 @@
 }  
 body{
     background-image: linear-gradient(125deg , var(--cor0), var(--cor1), var(--cor2));
-    background-attachment: fixed;
+    height: 100vh;
 }
 main{
     padding-left: 20px;
@@ -72,13 +72,14 @@ nav p{
     max-width: 600px;
     margin: auto;
     text-shadow: 3px 3px 9px black;
+    transition: all .3s;
 }
 nav a{
     text-decoration: none;
     font-weight: bold;
     color: var(--cor0);
 }
-nav a:hover{
-    text-decoration: underline;
-    color: var(--cor4);
+nav p:hover{
+    background-color: var(--cor4);
+    
 }
